@@ -1,33 +1,29 @@
 package com.advisor.service;
 
-import com.advisor.entity.UserEntity;
-import com.advisor.repository.UserRepository;
-import org.springframework.beans.factory.annotation.Autowired;
+//service/CustomUserDetailsService.java
+
+import com.advisor.entity.User;
+import com.advisor.repository.*;
+import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.*;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.List;
 
 @Service
+@RequiredArgsConstructor
 public class CustomUserDetailsService implements UserDetailsService {
+private final UserRepository userRepository;
 
-    @Autowired
-    private UserRepository userRepository;
-
-    @Override
-    public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
-        UserEntity user = userRepository.findByEmail(email)
-                     .orElseThrow(() -> new UsernameNotFoundException("User not found"));
-
-        if (!user.isVerified()) {
-            throw new UsernameNotFoundException("Email not verified");
-        }
-
-        return new org.springframework.security.core.userdetails.User(
-                user.getEmail(),
-                user.getPassword(),
-                Collections.singletonList(new SimpleGrantedAuthority(user.getRole().name()))
-        );
-    }
+@Override
+public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
+ User u = userRepository.findByEmail(email)
+     .orElseThrow(() -> new UsernameNotFoundException("User not found"));
+ return new org.springframework.security.core.userdetails.User(
+     u.getEmail(),
+     u.getPassword(),
+     List.of(new SimpleGrantedAuthority("ROLE_" + u.getRole().name()))
+ );
+}
 }
